# MDGA

./: .gitignore  Cargo.toml  MDGA.md  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: build.yml  release.yml
.mdga/: diagnostics
.mdga/commands/: check.md  release.md
.mdga/tasks/: current.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  hooks.ts  pricing.test.ts  styles.css  types.ts  utils.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: agent_loop.rs  agent_prompt.rs  chat.rs  checkpoint.rs  command_run.rs  commands.rs  compaction.rs  embedding.rs  hooks.rs  main.rs  mcp.rs  permissions.rs  pricing_capture.rs  state.rs  subagent.rs  tools.rs  web.rs
apps/desktop/src/components/: Sidebar.tsx  artifact-runtime.ts  artifact.test.tsx  artifact.tsx  dialogs.tsx  messages.tsx  settings.tsx  third-column.tsx  widget.test.tsx  widget.tsx
crates/agent-core/: Cargo.toml
crates/agent-core/src/: compaction.rs  lib.rs  loop_guard.rs  messages.rs  prompt.rs  reviewer.rs  test_report.rs  usage.rs  verification.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/codemap/: Cargo.toml
crates/codemap/src/: graph.rs  heuristic.rs  lang.rs  lib.rs  render.rs  search.rs  tags.rs
crates/deepseek-client/: Cargo.toml
crates/deepseek-client/src/: lib.rs  vision.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  framing.rs  lib.rs  pool.rs  server.rs  which.rs
crates/lsp/tests/: lsp_smoke.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs
crates/sandbox-runtime/: Cargo.toml
crates/sandbox-runtime/src/: lib.rs
crates/shared/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: crud.rs
crates/token-accounting/: Cargo.toml
crates/token-accounting/src/: lib.rs  presets.rs  thinking.rs
crates/token-accounting/tests/: pricing.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: appcontainer_win.rs  git.rs  lib.rs  sandbox_win.rs  worktree.rs
crates/tool-runtime/tests/: git_smoke.rs  path_guard.rs  push_pr_e2e.rs  worktree_isolation.rs
crates/wiki/: Cargo.toml
crates/wiki/src/: lib.rs  okf.rs  role.rs  sanitize.rs  sections.rs  store.rs
doc/: Plan01-MDGA-Core-Development-Roadmap.md  Plan03-Desktop-MVP.md  Plan04-Token-Accounting.md  Plan10-System-Protocols.md  Plan11-Agent-Tool-Runtime-And-Extensions.md  Plan12-Agent-Capability-Hardening.md  Plan13-CC-Codex-Parity-Roadmap.md  Plan16-main-rs-Modularization.md  Plan19-UX-P0-P2.md  Plan21-Cross-Feature-Logic-Fixes.md  Plan23-Composer-Workspace-Layout.md  Plan28-Mid-Stage-Roadmap.md  Plan29-Capability-Optimization-Backlog.md  Spec01-Workspace-Session-Binding.md  agent-roadmap.md  history.md
doc/archive/: Plan02-Technical-Architecture.md  Plan03-Desktop-MVP.md  Plan05-Agent-Kernel.md  Plan06-Security-And-Permissions.md  Plan07-DeepSeek-Client.md  Plan08-Mobile-Adaptation.md  Plan09-Sandbox-Runtime.md  Plan11-Agent-Tool-Runtime-And-Extensions.md  Plan12-Agent-Capability-Hardening.md  Plan14-UI-Design-System.md  Plan15-Multi-Agent-And-Interaction-Parity.md  Plan16-main-rs-Modularization.md  Plan17-Provider-And-Modality.md  Plan18-Vision-Pipeline.md  Plan20-Interaction-Logic-Fixes.md  Plan22-Interaction-Polish.md  Plan24-Scrollbar-Refine.md  Plan25-Agent-Core-Hardening.md  Plan27-Experience-Sweep.md
