[package]
name = "mdga-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
mdga-deepseek-client = { path = "../../../crates/deepseek-client" }
mdga-shared = { path = "../../../crates/shared" }
mdga-token-accounting = { path = "../../../crates/token-accounting" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
