[package]
name = "mdga-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
mdga-agent-core = { path = "../../../crates/agent-core" }
mdga-codemap = { path = "../../../crates/codemap" }
mdga-deepseek-client = { path = "../../../crates/deepseek-client" }
mdga-mcp-client = { path = "../../../crates/mcp-client" }
mdga-sandbox-runtime = { path = "../../../crates/sandbox-runtime" }
mdga-shared = { path = "../../../crates/shared" }
mdga-storage = { path = "../../../crates/storage" }
mdga-token-accounting = { path = "../../../crates/token-accounting" }
mdga-tool-runtime = { path = "../../../crates/tool-runtime" }
rusqlite.workspace = true
similar.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
pdf-extract = "0.7"
zip = "2"
base64 = "0.22"
reqwest.workspace = true
futures-util.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
